themes/mabinouze-v1/assets/sass/main.scss
$primary: #f6aa0a;
$primary-img: url(/unsplash/Lq1rOaigDoY-reduce.jpeg);

@import 'bootstrap/bootstrap';

.small-caps {
    font-variant: small-caps;
}

blockquote {
    border-left: 4px solid var(--bs-primary-border-subtle);
    padding-left: .5em;
}

body > main > .hero {
    background-image: $primary-img;
    background-size: 170% auto;
    background-position: 50% 100%;
    color: $white;
    padding: 1em;
    text-align: center;
    font-size: 1.15em;
    line-height: 1.2;
    font-weight: 400;

    @include media-breakpoint-up('sm') {
        font-size: 1.75em;
    }
}

body > main > .photos {
    display: grid;
    --columns: 2;
    grid-template-columns: repeat(var(--columns), 1fr);
    gap: .5em;

    @include media-breakpoint-up('sm') {
        --columns: 4;
        gap: 1em;
    }

    & > img  {
        width: 100%;
    }
}

body > footer {
    background-image: $primary-img;
    background-size: 240% auto;
    background-position: 50% 100%;
    color: $black;

    @include media-breakpoint-up('xs') {
        background-size: 210% auto;
    }
    @include media-breakpoint-up('sm') {
        background-size: 100% auto;
    }
}
body > footer > .footer-background {
    backdrop-filter: blur(1.25px);
}

.calendar {
    --calendar-color: var(--bs-dark);
    --calendar-text: #fff;
    display: inline-flex;
    flex-direction: column;
    align-items: stretch;
    text-align: center;
    border: 2px solid var(--calendar-color);
    border-radius: var(--bs-border-radius);
    font-size: 1rem;

    &-day {
        padding: .5ex 1ex;
        color: var(--calendar-text);
        background-color: var(--calendar-color);
        border-top-left-radius: calc(.5*var(--bs-border-radius));
        border-top-right-radius: calc(.5*var(--bs-border-radius));
    }
    &-time {
        padding: .5ex 1ex;
        color: var(--calendar-color);
        font-size: 1.75em;
    }
}

.list-group-item-add {
    &.btn-success {
        cursor: copy !important;
    }

    @include media-breakpoint-up('md') {
        visibility: hidden;
    }

    .list-group-item:hover & {
        visibility: visible;
    }
}

.icon {
    width: 2em;
    vertical-align: middle;
}

